[project]
name = "llm-caller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.69.0",
    "dotenv>=0.9.9",
    "openai>=2.3.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "slist>=0.3.15",
    "tenacity>=9.1.2",
]
