[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caller"
version = "1.2.0"
description = "Simple API caller with prompt caching and rate limiting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Atticus Wang", email = "zifanawang04@gmail.com"}
]
dependencies = [
    "aiosqlite>=0.20.0",
    "anthropic>=0.69.0",
    "black>=25.9.0",
    "cachetools>=6.2.1",
    "ipykernel>=7.0.1",
    "openai>=2.3.0",
    "pydantic>=2.12.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "slist>=0.3.15",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/chry-santhemum/caller"
Repository = "https://github.com/chry-santhemum/caller"
Documentation = "https://github.com/chry-santhemum/caller"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["F401"]
